[package]
name = "rqmesh-agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.26", features = ["bundled"]}
clap = "2"
rqmesh-core = { path = "../rqmesh-core" }
log = "0.4"
simplelog = "0.10"
